# shake-rg

./: CHANGELOG.md  README.md  cabal.project  shake-rg.cabal
app/: Main.hs
new-world-files/: aire-107.pgw  aire-113.pgw  aire-114.pgw  aire-119.pgw  aire-12.pgw  aire-121.pgw  aire-129.pgw  aire-135.pgw  aire-138.pgw  aire-142.pgw  aire-147.pgw  aire-149.pgw  aire-150.pgw  aire-152.pgw  aire-156.pgw  aire-157.pgw  aire-158.pgw  aire-159.pgw  aire-160.pgw  aire-161.pgw  aire-162.pgw  aire-38.pgw  aire-44.pgw  aire-54.pgw  aire-57.pgw  aire-69.pgw  aire-72.pgw  aire-73.pgw  aire-80.pgw  aire-83.pgw  aire-87.pgw  aire-91.pgw  aire-92.pgw  aire-94.pgw  aire-98.pgw  bado-1.pgw  bado-11.pgw  bado-14.pgw  bado-15.pgw  bado-19.pgw  (+2959 more)
scripts/: accept-all  convert_gif  create-leaflet.py  crop.py  do_expand  do_warp  fetch.nix  fetch.py  gen-all  leaflet.nix  make_big_tiles  make_tiles  match-hashes.py  merge-rasters.py  out  pickles  scraper.py  shell.nix  symlink_join  upload-maps  wfs
scripts/_build/: .shake.database  manifest.json
